# SAGSBench-by-SafeAlign-AI

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  leaderboard.html  pyproject.toml  sagsbench-infographic.md
.github/workflows/: ci.yml  defense-regression.yml  pages.yml
docs/: DEFENSE_EVALUATION.md  LEADERBOARD.md  ROADMAP.md
examples/: defense_eval.py  sdk_scan.py  secure_agent_stub.py  vulnerable_agent.py
frontend/: README.md  index.html  leaderboard.html  package.json
frontend/.well-known/: security.txt
frontend/assets/: app.js  styles.css
leaderboard/: README.md
leaderboard/schema/: submission.schema.json
leaderboard/submissions/: autogen-research-team.json  baseline-react-agent.json  crewai-ops-team.json  langgraph-finance-agent.json  mcp-support-agent.json
sagsbench/: __init__.py  campaign.py  defense_eval.py  judge.py  leaderboard.py  models.py  target.py
sagsbench/adapters/: __init__.py  http_adapter.py  openai_compatible.py
sagsbench/attacks/: __init__.py  baseline.py
sagsbench/cli/: main.py
sagsbench/datasets/: benign_attacks.yaml  enterprise_attacks.yaml
sagsbench/defenses/: __init__.py  base.py  builtin.py
sagsbench/judges/: __init__.py  llm_judge.py  policy_judge.py  regex_judge.py
sagsbench/policies/: sags_baseline.yaml
sagsbench/reports/: csv_report.py  html.py  markdown.py  sarif.py
tests/: test_defense_eval.py  test_leaderboard.py  test_models.py
